--- a/circle.yml
+++ b/circle.yml
@@ -10,5 +10,7 @@ dependencies:
     - sudo update-alternatives --set javac /usr/lib/jvm/java-8-openjdk-amd64/bin/javac
     - echo 'export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64' >> ~/.circlerc
 test:
+  pre:
+    - bundle exec rake rubocop
   override:
     - bundle exec rake ci
