--- a/config/blacklight.yml
+++ b/config/blacklight.yml
@@ -16,6 +16,8 @@ development:
 test: &test
   adapter: solr
   url: <%= "http://127.0.0.1:#{ENV['TEST_JETTY_PORT'] || 8888}/solr/cicognara" %>
-production:
+production: &production
   adapter: solr
-  url: <%= ENV['SOLR_URL'] || "http://127.0.0.1:8983/solr/cicognara" %>
+  url: <%= ENV['CICOGNARA_SOLR_URL'] || "http://127.0.0.1:8983/solr/cicognara" %>
+staging:
+  <<: *production
