--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,11 @@ dependencies:
     - sudo update-alternatives --set java /usr/lib/jvm/jdk1.8.0/bin/java
     - sudo update-alternatives --set javac /usr/lib/jvm/java-8-openjdk-amd64/bin/javac
     - echo 'export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64' >> ~/.circlerc
+database:
+  override:
+    - bundle exec rails db:create
+    - bundle exec rails db:migrate
+    - bundle exec rails db:migrate RAILS_ENV=test
 test:
   pre:
     - bundle exec rake rubocop
