--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ capybara-*.html
 /coverage/
 /spec/tmp
 /app/views/pages/catalogo/section*
-/app/views/pages/catalogo/item*
+/app/views/pages/catalogo/_item*
 **.orig
 rerun.txt
 pickle-email-*.html
@@ -32,3 +32,5 @@ bower.json
 
 # Ignore pow environment settings
 .powenv
+
+.byebug_history
