--- a/config/solr_wrapper_test.yml
+++ b/config/solr_wrapper_test.yml
@@ -1,8 +1,8 @@
 # Place any default configuration for solr_wrapper here
-# port: 8983
+port: 8888
 version: 6.2.0
 cloud: true
-instance_dir: tmp/solr-development
+instance_dir: tmp/solr-test
 collection:
   name: cicognara
   dir: solr/config
