--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ capybara-*.html
 /db/*.sqlite3
 /db/*.sqlite3-journal
 /public/system
+/public/cicognara.mrx.xml
+/public/catalogo.tei.xml
 /coverage/
 /spec/tmp
 /app/views/pages/catalogo/section*
