--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,7 @@
 require: rubocop-rspec
 
+inherit_from: .rubocop_todo.yml
+
 AllCops:
   DisplayCopNames: true
   Exclude:
@@ -21,7 +23,7 @@ Style/BlockComments:
   Exclude:
     - 'spec/spec_helper.rb'
 
-Style/PredicateName:
+Naming/PredicateName:
   Exclude:
     - 'app/controllers/catalog_controller.rb'
 
