--- a/config/database.yml
+++ b/config/database.yml
@@ -18,7 +18,11 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  adapter: postgresql
+  database: cicognara_test
+  host: <%= ENV["CICOGNARA_DB_HOST"] %>
+  username: <%= ENV["CICOGNARA_DB_USERNAME"] %>
+  password: <%= ENV["CICOGNARA_DB_PASSWORD"] %>
 
 production:
   <<: *default
