--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -38,6 +38,7 @@ Naming/PredicateName:
 RSpec/AnyInstance:
   Exclude:
     - 'spec/support/**/*'
+    - 'spec/views/catalog/_index_links_default.html.erb_spec.rb'
 
 RSpec/DescribeClass:
   Exclude:
