--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,6 +21,7 @@ Metrics/AbcSize:
 Metrics/BlockLength:
   Exclude:
     - 'spec/models/entry_spec.rb'
+    - 'spec/controllers/versions_controller_spec.rb'
 
 Metrics/ClassLength:
   Exclude:
@@ -62,11 +63,22 @@ RSpec/DescribeClass:
     - 'spec/routing/**/*'
     - 'spec/views/**/*'
 
-Style/Documentation:
-  Enabled: false
-
 RSpec/ExampleLength:
   Enabled: false
 
 RSpec/InstanceVariable:
+  Enabled: false
+
+RSpec/NestedGroups:
+  Exclude:
+    - 'spec/controllers/versions_controller_spec.rb'
+    - 'spec/models/entry_spec.rb'
+    - 'spec/requests/partials_spec.rb'
+
+RSpec/MultipleExpectations:
+  Exclude:
+    - 'spec/controllers/versions_controller_spec.rb'
+    - 'spec/views/versions/show.html.erb_spec.rb'
+
+Style/Documentation:
   Enabled: false
