Implements MarcRecord as an ActiveRecord Model; Assigns a one-to-one relationship between Books and MarcRecords; Delegates Digital Cicognara Library (DCL) Numbers for Books to MarcRecords; Ensures that there can be multiple DCL Numbers per MarcRecord (and, by relation, Book); Ensures that ARKs are indexed for MarcRecords and Books; Uses XPaths to MARC XML elements to resolve individual MARC record entities; Adds Rake tasks for purging the Solr collection of Documents and running a Solr development environment

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -15,10 +15,13 @@ Rails:
 Metrics/AbcSize:
   Exclude:
     - 'spec/support/login_helper.rb'
+    - 'app/models/marc_record.rb'
+    - 'lib/cicognara/catalogo_item.rb'
 
 Metrics/BlockLength:
   Exclude:
     - 'spec/models/entry_spec.rb'
+    - 'spec/controllers/versions_controller_spec.rb'
 
 Metrics/ClassLength:
   Exclude:
@@ -30,6 +33,9 @@ Metrics/LineLength:
 Metrics/MethodLength:
   Exclude:
     - 'app/controllers/catalog_controller.rb'
+    - 'app/models/marc_record.rb'
+    - 'lib/cicognara/catalogo_item.rb'
+    - 'lib/cicognara/tei_indexer.rb'
 
 Style/BlockComments:
   Exclude:
