Implements MarcRecords as first-order Models; Generates file URIs (using a combination of file paths and XPaths) in order to resolve MarcRecords to individual elements within XML Documents; Uses MD5 hashes of the file URIs for Solr Doc. IDs; Indexes DCL numbers into the Solr field "dclib_s"; Indexes ARKs into the Solr field "ark_s"; Ensures that Book Models can only have on MarcRecord; Ensures that Entry Models can reference multiple MarcRecords through referencing multiple Books; Restructuring the BulkEntryIndexer in order to delegate to a private EntryIndexer class; Introduces a development server Rake task

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -12,17 +12,25 @@ AllCops:
 Rails:
   Enabled: true
 
+Layout/IndentationConsistency:
+  EnforcedStyle: rails
+
 Metrics/AbcSize:
   Exclude:
     - 'spec/support/login_helper.rb'
+    - 'app/models/marc_record.rb'
+    - 'lib/cicognara/catalogo_item.rb'
+    - 'lib/cicognara/book_indexer.rb'
 
 Metrics/BlockLength:
   Exclude:
     - 'spec/models/entry_spec.rb'
+    - 'spec/controllers/versions_controller_spec.rb'
 
 Metrics/ClassLength:
   Exclude:
     - 'app/controllers/catalog_controller.rb'
+    - 'lib/cicognara/tei_indexer.rb'
 
 Metrics/LineLength:
   Enabled: false
@@ -31,6 +39,10 @@ Metrics/MethodLength:
   Exclude:
     - 'app/controllers/catalog_controller.rb'
     - 'app/models/ability.rb'
+    - 'app/models/marc_record.rb'
+    - 'lib/cicognara/catalogo_item.rb'
+    - 'lib/cicognara/tei_indexer.rb'
+    - 'lib/cicognara/book_indexer.rb'
 
 Style/BlockComments:
   Exclude:
