--- a/config/database.yml
+++ b/config/database.yml
@@ -1,37 +1,21 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
+development: &default
+  adapter: postgresql
+  database: cicognara_development
+  host: <%= ENV["CICOGNARA_DB_HOST"] %>
+  username: <%= ENV["CICOGNARA_DB_USERNAME"] %>
+  password: <%= ENV["CICOGNARA_DB_PASSWORD"] %>
+  timeout: 5000
+
+test:
+  <<: *default
+  database: cicognara_test
+
+production: &deploy
+  <<: *default
+  database: <%= ENV["CICOGNARA_DB"] %>
+
+staging:
   adapter: sqlite3
   pool: 5
   timeout: 5000
-
-development:
-  <<: *default
-  database: db/development.sqlite3
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  <<: *default
-  adapter: postgresql
-  database: cicognara_test
-  host: <%= ENV["CICOGNARA_DB_HOST"] %>
-  username: <%= ENV["CICOGNARA_DB_USERNAME"] %>
-  password: <%= ENV["CICOGNARA_DB_PASSWORD"] %>
-
-production:
-  <<: *default
-  adapter: postgresql
-  database: <%= ENV["CICOGNARA_DB"] %>
-  host: <%= ENV["CICOGNARA_DB_HOST"] %>
-  username: <%= ENV["CICOGNARA_DB_USERNAME"] %>
-  password: <%= ENV["CICOGNARA_DB_PASSWORD"] %>
-
-staging:
-  <<: *default
   database: db/staging.sqlite3
