Run Getty every Monday at 11 PM.
Closes #389

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,7 @@ AllCops:
     - 'db/**/*'
     - 'app/models/marc_indexer.rb' # TODO
     - 'vendor/**/*'
+    - 'tmp/**/*'
 
 Rails:
   Enabled: true
