--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           POSTGRES_PASSWORD: ""
       - image: solr:7.7-alpine
         command: bin/solr -cloud -noprompt -f -p 8888
-    steps:
+    steps: &test_steps
       - checkout
       - run: mkdir -p $CIRCLE_ARTIFACTS $CIRCLE_TEST_REPORTS
       # use bundler 2
@@ -66,3 +66,27 @@ jobs:
           path: tmp/capybara
       - store_artifacts:
           path: /tmp/circleci-test-results
+  test_2_6:
+    # Primary command image where all commands run
+    docker:
+      - image: circleci/ruby:2.6-node-browsers
+        environment:
+          PGHOST: 127.0.0.1
+          PGUSER: root
+          RAILS_ENV: test
+      # Service container image available at 'host: localhost'
+      - image: postgres:10
+        environment:
+          POSTGRES_DB: lae_blacklight_test
+          POSTGRES_USER: root
+          POSTGRES_HOST_AUTH_METHOD: trust
+      - image: solr:7.7-alpine
+        command: bin/solr -cloud -noprompt -f -p 8888
+    working_directory: ~/lae-blacklight
+    steps: *test_steps
+workflows:
+  version: 2
+  build_accept_deploy:
+    jobs:
+      - build
+      - test_2_6
