--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,19 +5,24 @@ jobs:
     environment:
       CIRCLE_ARTIFACTS: /tmp/circleci-artifacts
       CIRCLE_TEST_REPORTS: /tmp/circleci-test-results
+      SOLR_URL: "http://solr:SolrRocks@127.0.0.1:8888/solr/cicognara"
     docker:
       - image: circleci/ruby:2.6-node-browsers
         environment:
           RAILS_ENV: test
           CICOGNARA_DB_HOST: localhost
           CICOGNARA_DB_USERNAME: cicognara
+      - image: zookeeper:3.4
       - image: postgres:10.3-alpine
         environment:
           POSTGRES_USER: cicognara
           POSTGRES_DB: cicognara_test
           POSTGRES_PASSWORD: ""
-      - image: solr:7.7-alpine
-        command: bin/solr -cloud -noprompt -f -p 8888
+      - image: solr:8.4
+        command:
+          - "sh"
+          - "-c"
+          - wget -O /tmp/security.json "https://gist.githubusercontent.com/eliotjordan/a27be341dc2e7a532bad99203e0f55b7/raw/5866efab9242f953764c1b03d17763309e22948f/security.json" && server/scripts/cloud-scripts/zkcli.sh -zkhost localhost:2181 -cmd putfile /security.json /tmp/security.json && bin/solr -cloud -noprompt -f -p 8888 -z localhost:2181
     steps: &test_steps
       - checkout
       - run:
@@ -52,8 +57,8 @@ jobs:
           command: |
             cd solr/config
             zip -1 -r solr_config.zip ./*
-            curl -H "Content-type:application/octet-stream" --data-binary @solr_config.zip "http://localhost:8888/solr/admin/configs?action=UPLOAD&name=cicognara"
-            curl -H 'Content-type: application/json' http://localhost:8888/api/collections/ -d '{create: {name: cicognara, config: cicognara, numShards: 1}}'
+            curl -H "Content-type:application/octet-stream" --data-binary @solr_config.zip "http://solr:SolrRocks@127.0.0.1:8888/solr/admin/configs?action=UPLOAD&name=cicognara"
+            curl -H 'Content-type: application/json' http://solr:SolrRocks@127.0.0.1:8888/api/collections/ -d '{create: {name: cicognara, config: cicognara, numShards: 1}}'
 
       # Cache Dependencies
       - type: cache-save
