Fix link to MET.
Closes https://github.com/pulibrary/cicognara-catalogo/issues/147

--- a/config/partners.yml
+++ b/config/partners.yml
@@ -31,7 +31,7 @@ contributors:
     link: https://library.columbia.edu/
   - logo: the_met.png
     label: Metropolitan Museum of Art, New York
-    link: https://www.metmuseum.org/ %>
+    link: https://www.metmuseum.org
   - logo: national_gallery_london.png
     label: National Gallery, London, National Art Library
     link: https://www.nationalgallery.org.uk/research/research-centre/library
