Fixing wording of National Gallery, London

--- a/config/partners.yml
+++ b/config/partners.yml
@@ -33,7 +33,7 @@ contributors:
     label: Metropolitan Museum of Art, New York
     link: https://www.metmuseum.org
   - logo: national_gallery_london.png
-    label: National Gallery, London, National Art Library
+    label: National Gallery, London
     link: https://www.nationalgallery.org.uk/research/research-centre/library
   - logo: illinois.png
     label: University of Illinois at Urbana-Champaign Library
